objects/Account_Credential__c.object
<CustomObject>
    <description>Use to record credentials associated with Account</description>
    <label>Account Credential</label>
    <nameField>
        <label>Application</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>URL__c</fullName>
        <label>Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Account credential notes and details.</description>
        <inlineHelpText>Account credential notes and details.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account that this application/credentials belong to</description>
        <inlineHelpText>The account that this application/credentials belong to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Credentials</relationshipLabel>
        <relationshipName>Account_Credentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pwd_Token__c</fullName>
        <formula>Password__c + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pwd/Token</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Temp__c</fullName>
        <label>Test-Temp</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provide any relevant details about this application</description>
        <inlineHelpText>Provide any relevant details about this application</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Login_URL__c</fullName>
        <formula>HYPERLINK(
    IF(RIGHT(URL__c, 1)=&quot;/&quot;, LEFT(URL__c, LEN(URL__c)-1), URL__c)
      &amp;
      &quot;/&quot;
      &amp;
      &quot;login.jsp&quot;
      &amp;
      &quot;?&quot;
      &amp;
      &quot;un=&quot;
      &amp;
      User_Name__c
      &amp;
      &quot;&amp;&quot;
      &amp;
      &quot;pw=&quot;
      &amp;
      Password__c, 
    URL__c
      &amp;
      &quot;/&quot;
      &amp;
      &quot;login.jsp&quot;
      &amp;
      &quot;?&quot;
      &amp;
      &quot;un=&quot;
      &amp;
      User_Name__c
      &amp;
      &quot;&amp;&quot;
      &amp;
      &quot;pw=&quot;
      &amp;
      Password__c
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto-Login URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Namespace__c</fullName>
        <description>Managed Package Namespace. Used if the Account Credentials are for a dev org in which a managed package is developed.</description>
        <inlineHelpText>Managed Package Namespace. Used if the Account Credentials are for a dev org in which a managed package is developed.</inlineHelpText>
        <label>Package Namespace</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email_Address__c</fullName>
        <label>User E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Security_Question_Response__c</fullName>
        <description>Answer to authentication security question.</description>
        <inlineHelpText>Answer to authentication security question.</inlineHelpText>
        <label>Security Question Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>